--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/dulcedu/basic_quiz/issues"
   },
-  "homepage": "https://github.com/dulcedu/basic_quiz#readme"
+  "homepage": "https://github.com/dulcedu/basic_quiz#readme",
+  "dependencies": {
+    "bulma-extensions": "^6.2.7"
+  },
+  "devDependencies": {
+    "lite-server": "^2.5.4"
+  }
 }
